--- a/src/app/partials/call-information/call-information.component.html
+++ b/src/app/partials/call-information/call-information.component.html
@@ -12,6 +12,8 @@
     </div>
   </div>
   <div class="col-sm-4">
-    <phone-component></phone-component>
+    <div class="phone-col">
+      <phone-component></phone-component>
+    </div>
   </div>
 </div>
