--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,27 +1,33 @@
+<mat-form-field appearance="standard">
+  <mat-label>Filter</mat-label>
+  <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
+</mat-form-field>
 
-    <div class="table-container">
-        <mat-form-field appearance="standard">
-          <mat-label>Filter</mat-label>
-          <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
-        </mat-form-field>
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort (matSortChange)="announceSortChange($event)">
 
-        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-          <ng-container *ngFor="let column of columns" [matColumnDef]="column.columnDef">
-            <th mat-header-cell *matHeaderCellDef>
-              {{column.header}}
-            </th>
-            <td mat-cell *matCellDef="let row">
-              {{column.cell(row)}}
-            </td>
-          </ng-container>
-          <tr class="mat-row" *matNoDataRow>
-            <td class="mat-cell" colspan="6">No data matching the filter "{{input.value}}"</td>
-          </tr>
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
+  <ng-container [matColumnDef]="col" *ngFor="let col of  displayedColumns">
 
-        <mat-paginator [length]="100" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page"
-          showFirstLastButtons>
-        </mat-paginator>
-    </div>
+    <ng-container *ngIf="col !== 'status'">    
+      <th mat-header-cell *matHeaderCellDef mat-sort-header matTooltipPosition="above" matTooltip="Sort by {{col}}">{{col}}</th>
+      <td mat-cell *matCellDef="let element"> {{element[col]}} </td>
+    </ng-container>
+
+    <ng-container *ngIf="col === 'status'">     
+      <th mat-header-cell *matHeaderCellDef mat-sort-header matTooltipPosition="above" matTooltip="Sort by {{col}}"><mat-checkbox></mat-checkbox></th>
+      <td mat-cell *matCellDef="let i = index" id="{{ i }}"><mat-checkbox
+        (change)="getRowId( i )"></mat-checkbox></td>
+    </ng-container>
+
+  </ng-container>
+
+  <tr class="mat-row" *matNoDataRow>
+    <td class="mat-cell" colspan="6">No data matching the filter "{{input.value}}"</td>
+  </tr>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+
+<mat-paginator [length]="100" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page"
+  showFirstLastButtons>
+</mat-paginator>
