--- a/src/app/partials/call-information/call-information.component.css
+++ b/src/app/partials/call-information/call-information.component.css
@@ -35,5 +35,12 @@
   min-width: 28rem;
 }
 
-
-
+.phone-col {
+  background: #e6e7ee;
+  overflow-y: hidden;
+  border-radius: 2rem 2rem 2rem 2rem;
+  border: 0.10rem solid #d1d9e6;
+  padding: 24px 0px 24px 0px;
+  height: 59rem;
+  min-width: 28rem;
+}
