--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -7,15 +7,22 @@
 
   <ng-container [matColumnDef]="col" *ngFor="let col of  displayedColumns">
 
-    <ng-container *ngIf="col !== 'status'">    
+    <ng-container *ngIf="col !== 'checkbox'">    
       <th mat-header-cell *matHeaderCellDef mat-sort-header matTooltipPosition="above" matTooltip="Sort by {{col}}">{{col}}</th>
-      <td mat-cell *matCellDef="let element"> {{element[col]}} </td>
+      <td mat-cell *matCellDef="let element ; let i = index" (keyup)="editColumn(col, inputValue)">
+					<input matInput placeholder="{{element[col]}}" id="{{col + i + 1}}" value="{{element[col]}}">
+         </td>
     </ng-container>
 
-    <ng-container *ngIf="col === 'status'">     
-      <th mat-header-cell *matHeaderCellDef mat-sort-header matTooltipPosition="above" matTooltip="Sort by {{col}}"><mat-checkbox></mat-checkbox></th>
-      <td mat-cell *matCellDef="let i = index" id="{{ i }}"><mat-checkbox
-        (change)="getRowId( i )"></mat-checkbox></td>
+    <ng-container *ngIf="col === 'checkbox'">     
+      <th mat-header-cell *matHeaderCellDef  matTooltipPosition="above" matTooltip="Sort by {{col}} ">
+        <mat-checkbox
+        (change)="allRecordsChecked()">
+      </mat-checkbox></th>
+      <td mat-cell *matCellDef="let i = index" id="{{ i }}">
+        <mat-checkbox
+        (change)="recordChecked( i )">
+      </mat-checkbox></td>
     </ng-container>
 
   </ng-container>
@@ -25,7 +32,7 @@
   </tr>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns; let i = index"  (click)="row.selectedRow = !row.selectedRow ; getRowId(i)" [ngClass]="{selectedRow: row.selectedRow}"></tr>
 </table>
 
 <mat-paginator [length]="100" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page"
