--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,98 +1,111 @@
-<div class="row width-100 margin-bt">
-    <div class="iconbutton-neumorphism " (click)="displayMenu()">
-      <i class="bi bi-sliders"></i>
+<!-- <p-table [columns]="thData" [value]="tdData" 
+[paginator]="true" [rows]="10" [showCurrentPageReport]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [rowsPerPageOptions]="[10,25,50]"
+sortMode="multiple"
+#dt2 [globalFilterFields]="thField"
+[(selection)]="selectedRows" selectionMode="single"
+>
+
+<ng-template pTemplate="caption">
+    <div class="flex">
+        <span class="p-input-icon-left ml-auto">
+            <input pInputText #textInput type="text" (input)="dt2.filterGlobal(textInput.value, 'contains')" placeholder="Filter" />
+        </span>
     </div>
+</ng-template>
 
-
-
-      <button class="button-neumorphism margin-lt margin-bt" matTooltip="Add new record" matTooltipPosition="above" [ngClass]="toggleMenu ? 'show' : 'hide'">
-        <i class="bi bi-plus-square-fill "></i> Add new record
-      </button>
-
-      <button class="button-neumorphism margin-lt margin-bt" matTooltip="Group record" matTooltipPosition="above" [ngClass]="toggleMenu ? 'show' : 'hide'">
-        <i class="bi bi-bounding-box"></i> Group record
-      </button>
-
-      <div class="button-neumorphism margin-lt margin-bt" matTooltip="Hide filter" matTooltipPosition="above"
-        (click)="showFilter()" [ngClass]="toggleMenu ? 'show' : 'hide'">
-        <span [ngClass]="toggleFilter ? 'hide' : 'show'">
-          <i class="bi bi-eye-slash-fill "></i> Hide filter
-        </span>
-        <span [ngClass]="toggleFilter ? 'show' : 'hide'">
-          <i class="bi bi-eye-fill "></i> Show filter
-        </span>
-      </div>
-
-</div>
-
-<div [ngClass]="toggleFilter ? 'hide' : 'show'">
-  <mat-form-field appearance="standard">
-    <mat-label>Filter</mat-label>
-    <input matInput type="text" (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
-  </mat-form-field>
+  <ng-template pTemplate="header" let-columns let-rowIndex="rowIndex">
+      <tr>
+        <th style="width: 3rem">
+ 
+        </th>
+          <th *ngFor="let col of columns"  pSortableColumn="{{col.field}}" >
+              {{col.title}}<p-sortIcon field="{{col.field}}"></p-sortIcon>
+          </th>
+      </tr>
+  </ng-template>
+  <ng-template pTemplate="body" let-rowData let-columns="columns" let-i="rowIndex">
+      <tr>
+        <td>
+            <p-tableCheckbox [value]="i" (click)="selectProduct(i)" 
+            >
+            </p-tableCheckbox>
+        </td>
+          <td *ngFor="let col of columns">
+              {{rowData[col.field]}}
+          </td>
+      </tr>
+  </ng-template>
   
+  <ng-template pTemplate="paginatorleft">
+    <p-button type="button" icon="pi pi-plus" styleClass="p-button-text"></p-button>
+</ng-template>
+<ng-template pTemplate="paginatorright">
+    <p-button type="button" icon="pi pi-cloud" styleClass="p-button-text"></p-button>
+</ng-template>
+</p-table> -->
+
+
+<div class="card">
+    <p-toolbar >
+        <ng-template pTemplate="left">
+
+        <button class="button-neumorphism margin-lt margin-bt" (click)="deleteSelectedRows()" [disabled]="!selectedRows || !selectedRows.length">
+            <i class="bi bi-trash-fill "></i> Delete all
+          </button>
+
+          <button class="button-neumorphism margin-lt margin-bt" >
+            <i class="bi bi-plus-square-fill "></i> Add new record
+          </button>
+    
+          <button class="button-neumorphism margin-lt margin-bt" >
+            <i class="bi bi-bounding-box"></i> Group record
+          </button>
+
+        </ng-template>
+    </p-toolbar>
+
+    <p-table #dt  [columns]="thData" [value]="tdData" [rows]="10" [paginator]="true" [globalFilterFields]="thData" [rowsPerPageOptions]="[10,25,50]"
+        [(selection)]="selectedRows" [rowHover]="true" dataKey="index"
+        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [showCurrentPageReport]="true">
+        <ng-template pTemplate="caption">
+
+            <div>
+                    <mat-form-field appearance="standard">
+                        <mat-label>Filter by</mat-label>
+                        <input matInput type="text" #textInput (keyup)="dt.filterGlobal(textInput.value, 'contains')" placeholder="Ex. ium">
+                    </mat-form-field>
+            </div>
+        </ng-template>
+        <ng-template pTemplate="header" let-columns>
+            <tr>
+                <th>
+                    <p-tableHeaderCheckbox ></p-tableHeaderCheckbox>
+                </th>
+                <th *ngFor="let col of columns"  pSortableColumn="{{col.field}}" >
+                    {{col.title}}<p-sortIcon field="{{col.field}}"></p-sortIcon>
+                </th>
+                
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-rowData let-columns="columns">
+            <tr>
+                <td>
+                    <p-tableCheckbox [value]="rowData"></p-tableCheckbox>
+                </td>
+                <td *ngFor="let col of columns">
+                    {{rowData[col.field]}}
+                </td>
+                <td>
+                    <div class="iconbutton-neumorphism">
+                    <i class="bi bi-pencil-square i-neumorphism"></i>
+                  </div>
+                  <div class="iconbutton-neumorphism ">
+                    <i class="bi bi-trash-fill i-neumorphism"></i>
+                  </div>
+                </td>
+            </tr>
+        </ng-template>
+    </p-table>
 </div>
 
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort
-  (matSortChange)="announceSortChange($event)">
-
-  <ng-container [matColumnDef]="col" *ngFor="let col of  displayedColumns">
-    <ng-container *ngIf="col !== 'selected'">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header matTooltipPosition="above" matTooltip="Sort by {{col}}">
-        {{col}}</th>
-      <td mat-cell *matCellDef="let element ; let i = index" (keyup)="editColumn(col, inputValue)" >
-        <!-- <div class="iconbutton-table-container" *ngIf="toggleRowMenu">
-          <div class="form-check form-check-inline button-inline">
-            <div class="iconbutton-neumorphism" matTooltip="Edit fields" matTooltipPosition="above"
-              (click)="editFields()">
-              <i class="bi bi-pencil-square i-neumorphism" *ngIf="!editField"></i>
-              <i class="bi bi-x-circle-fill i-neumorphism" *ngIf="editField"></i>
-            </div>
-            <div class="iconbutton-neumorphism" matTooltip="Save changes" matTooltipPosition="above" *ngIf="editField">
-              <i class="bi bi-check-circle-fill i-neumorphism"></i>
-            </div>
-            <div class="iconbutton-neumorphism" matTooltip="Delete fields" matTooltipPosition="above" *ngIf="!editField">
-              <i class="bi bi-trash-fill i-neumorphism"></i>
-            </div>
-          </div>
-        </div> -->
-        <input matInput type="text" placeholder="{{element[col]}}" id="{{col + i}}" value="{{element[col]}}">
-      </td>
-    </ng-container>
-
-    <ng-container *ngIf="col === 'selected'">
-      <th mat-header-cell *matHeaderCellDef matTooltipPosition="above" matTooltip="Sort by {{col}} ">
-        <mat-checkbox [checked]="allSelected"
-        (change)="toggleMasterSelection()" [indeterminate]="!!selection.selected.length && !allSelected" (change)="allRecordsChecked(selection.selected)">
-        <span class="selected-text" *ngIf="selection.selected.length"> ({{selection.selected.length}} selected)</span>
-      </mat-checkbox>
-        
-      </th>
-      <td mat-cell *matCellDef="let i = index" id="{{ i }}">
-        <mat-checkbox (click)="recordChecked( i , $event, selection.selected.length)" [checked]="selection.isSelected(i)" (change)="selection.toggle(i)">
-        </mat-checkbox>
-      </td>
-    </ng-container>
-
-  </ng-container>
-
-  <tr class="mat-row" *matNoDataRow>
-    <td class="mat-cell" colspan="6">No data matching the filter "{{input.value}}"</td>
-  </tr>
-
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns; let i = index"
-    ></tr>
-</table>
-
-<div class="row width-100 margin-bt">
-<mat-paginator [length]="100" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page" showFirstLastButtons></mat-paginator>
-<div class="width-sm margin-lt ">
-  <mat-form-field matTooltipPosition="above" matTooltip="Go to page">
-    <input matInput type="number" placeholder="Page" [(ngModel)]="pageNumber" (ngModelChange)="goToPage()">
-  </mat-form-field>
-</div>
-</div>
-
-<!-- <mat-paginator [pageSizeOptions]="[5, dataSource.data.length>8? dataSource.data.length:''  ]" showFirstLastButtons>
-</mat-paginator> -->
+<p-confirmDialog [style]="{width: '450px'}"></p-confirmDialog>
