--- a/src/app/partials/queue/queue.component.html
+++ b/src/app/partials/queue/queue.component.html
@@ -2,6 +2,6 @@
   <div class="col-12">
     <h1>Queue</h1>
     <hr><br />
-    <table-component></table-component>
+    <tableccomponent></tableccomponent>
   </div>
 </div>
