--- a/src/app/components/table/table.component.css
+++ b/src/app/components/table/table.component.css
@@ -1,13 +1,341 @@
 
-.width-sm{
-    width: 4rem;
-    text-align: center;
-    
+  .table-menu {
+    position: relative;
+    display: inline-block;
   }
   
-  .width-sm .mat-form-field{
-    text-align: center;
-    font-size: small !important;
-    padding-top: 1.3rem;
+  .table-menu-content {
+    display: none;
+    position: absolute;
+    left: -400px;
+    top: -41px;
+    z-index: 1;
   }
   
+  .table-menu-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+
+  .table-menu:hover .table-menu-content {display: block;}
+  
+  .table-menu-container:hover .menu-content {display: block}
+
+    ::ng-deep .p-toolbar {
+        background: #e6e7ee;
+        border: none;
+    }
+
+    ::ng-deep .p-datatable table {
+        color: #44476a;
+        background-color: #e6e7ee;
+        box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff !important;
+        border-radius: 1rem;
+        border: none;
+    }
+
+
+    ::ng-deep.p-datatable .p-datatable-header {
+        background-color: #e6e7ee;
+
+        border: none;
+    }
+
+    ::ng-deep .p-datatable .p-datatable-thead>tr>th {
+        color: #44476A;
+        text-align: center;
+        background-color: transparent;
+        border: none;
+        padding: 1rem 0 1rem 0;
+
+    }
+
+    ::ng-deep .p-datatable .p-datatable-tbody>tr>td {
+        text-align: center;
+        background-color: transparent;
+        border: none;
+
+    }
+
+    ::ng-deep .p-datatable .p-datatable-tbody>tr {
+        text-align: center;
+        border: none;
+        background-color: transparent;
+        border-top: .0625rem solid #d1d9e6;
+
+    }
+
+    ::ng-deep.p-datatable .p-sortable-column:not(.p-highlight):hover {
+        background-color: transparent;
+        color: #44476A;
+
+    }
+
+    ::ng-deep.p-datatable .p-sortable-column.p-highlight {
+        background: transparent;
+        color: #44476A;
+
+    }
+
+    ::ng-deep.p-datatable .p-sortable-column.p-highlight:hover {
+        background: rgba(38, 40, 51, .03);
+        color: #44476A;
+    }
+
+    ::ng-deep.p-datatable .p-sortable-column .p-sortable-column-icon {
+        color: #b8b9be;
+    }
+
+    ::ng-deep.p-datatable .p-sortable-column:focus {
+        box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
+        background-color: rgba(0, 0, 0, 0);
+        border-bottom-left-radius: 1rem;
+        border-bottom-right-radius: 1rem;
+    }
+
+    ::ng-deep.p-datatable.p-datatable-hoverable-rows .p-datatable-tbody>tr:not(.p-highlight):hover {
+        background-color: rgba(38, 40, 51, .03);
+        transition: 1s;
+
+    }
+
+    ::ng-deep.p-datatable .p-datatable-tbody>tr:last-child>td:first-child {
+        border-bottom-left-radius: 1rem;
+    }
+
+    ::ng-deep.p-datatable .p-datatable-tbody>tr:last-child>td:last-child {
+        border-bottom-right-radius: 1rem;
+    }
+
+    ::ng-deep.p-paginator {
+        background: #e6e7ee;
+        color: #44476A;
+        border: none;
+        padding: 1rem 0 0 0;
+    }
+
+    ::ng-deep.p-paginator .p-paginator-current {
+        color: #44476A;
+    }
+
+    ::ng-deep.p-paginator .p-paginator-first,
+    ::ng-deep.p-paginator .p-paginator-prev,
+    ::ng-deep.p-paginator .p-paginator-next,
+    ::ng-deep.p-paginator .p-paginator-last {
+        color: #b8b9be;
+        border-radius: 1rem;
+    }
+
+    ::ng-deep.p-paginator-element:focus {
+        box-shadow: none;
+    }
+
+    ::ng-deep.p-paginator .p-paginator-pages .p-paginator-page.p-highlight {
+        color: #44476A;
+        background-color: rgba(0, 0, 0, 0);
+        border-radius: 1rem;
+        border: .0625rem solid #d1d9e6;
+        box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
+    }
+
+    ::ng-deep.p-paginator .p-paginator-pages .p-paginator-page {
+        border-radius: 1rem;
+        color: #b8b9be;
+    }
+
+    ::ng-deep.p-paginator .p-paginator-pages .p-paginator-page:not(.p-highlight):hover {
+        border: .0625rem solid #d1d9e6;
+        color: #44476a;
+        background-color: #e6e7ee;
+        box-shadow: 2px 2px 5px #b8b9be;
+        font-weight: 600;
+    }
+
+
+    ::ng-deep.p-paginator .p-paginator-first:not(.p-disabled):not(.p-highlight):hover,
+    ::ng-deep.p-paginator .p-paginator-prev:not(.p-disabled):not(.p-highlight):hover,
+    ::ng-deep.p-paginator .p-paginator-next:not(.p-disabled):not(.p-highlight):hover,
+    ::ng-deep.p-paginator .p-paginator-last:not(.p-disabled):not(.p-highlight):hover {
+        border: .0625rem solid #d1d9e6;
+        color: #44476a;
+        background-color: #e6e7ee;
+        box-shadow: 2px 2px 5px #b8b9be;
+        font-weight: 600;
+    }
+
+    ::ng-deep.p-paginator .p-paginator-next:not(.p-disabled):not(.p-highlight):hover,
+    p-paginator-icon {
+        box-shadow: none;
+        font-size: 1.5rem;
+
+    }
+
+    ::ng-deep.p-disabled {
+        display: none !important;
+    }
+
+    ::ng-deep.pi-sort-alt:before {
+        content: '\e933 \A \e930';
+    }
+
+    ::ng-deep.pi-sort-amount-up-alt:before {
+        content: '\e933';
+    }
+
+    ::ng-deep.pi-sort-amount-down:before {
+        content: '\e930';
+    }
+
+
+    ::ng-deep.p-datatable .p-sortable-column:not(.p-highlight):hover .p-sortable-column-icon {
+        color: #44476a;
+        transition: 0.8s;
+
+    }
+
+    ::ng-deep.p-datatable .p-sortable-column.p-highlight .p-sortable-column-icon {
+        color: #44476a;
+
+    }
+
+    ::ng-deep.p-datatable .p-sortable-column.p-highlight:hover .p-sortable-column-icon {
+        color: #44476a;
+
+
+    }
+
+    ::ng-deep.p-checkbox {
+        width: unset;
+        height: unset;
+    }
+
+    ::ng-deep.p-checkbox .p-checkbox-box {
+        width: 2rem;
+        height: 2rem;
+        background-color: #e6e7ee;
+
+    }
+
+    ::ng-deep.p-checkbox .p-checkbox-box .p-checkbox-icon {
+        color: #44476a;
+        font-size: 1rem;
+        font-weight: bold;
+
+    }
+
+    ::ng-deep.p-checkbox:not(.p-checkbox-disabled) .p-checkbox-box {
+        transition: ease-in-out 0.2s;
+
+    }
+
+    ::ng-deep.p-checkbox:not(.p-checkbox-disabled) .p-checkbox-box:hover {
+        border: 0.2rem solid #d1d9e6;
+        color: #44476a;
+        background-color: #e6e7ee;
+    }
+
+    ::ng-deep.p-checkbox:not(.p-checkbox-disabled) .p-checkbox-box.p-highlight:hover {
+        border: .0625rem solid #d1d9e6;
+        color: #44476a;
+        background-color: #e6e7ee;
+        box-shadow: 2px 2px 5px #b8b9be;
+    }
+
+    ::ng-deep.p-checkbox .p-checkbox-box.p-highlight {
+        background-color: rgba(0, 0, 0, 0);
+        border: .0625rem solid #d1d9e6;
+        box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
+    }
+
+
+    ::ng-deep.p-checkbox .p-checkbox-box {
+        color: #b8b9be;
+
+    }
+
+    ::ng-deep.p-dropdown .p-dropdown-panel {
+        border-radius: 1rem;
+        border: none;
+    }
+
+    ::ng-deep.p-dropdown-items-wrapper {
+        border-radius: 1rem;
+    }
+
+    ::ng-deep.p-dropdown:not(.p-disabled).p-focus {
+        box-shadow: none;
+        border: none;
+        border-bottom: .1rem solid #44476a;
+
+    }
+
+    ::ng-deep.p-dropdown:not(.p-disabled).p-focus .p-dropdown-label.p-inputtext,
+    ::ng-deep.p-dropdown:not(.p-disabled).p-focus .p-dropdown-trigger {
+        color: #44476a;
+
+    }
+
+    ::ng-deep.p-dropdown .p-dropdown-label.p-inputtext {
+        color: #b8b9be;
+
+    }
+
+    ::ng-deep.p-dropdown:hover .p-dropdown-label.p-inputtext {
+        color: #44476a;
+
+    }
+
+    ::ng-deep.p-dropdown .p-dropdown-trigger {
+        color: #b8b9be;
+
+    }
+
+    ::ng-deep.p-dropdown:hover .p-dropdown-trigger {
+        color: #44476a;
+
+    }
+
+    ::ng-deep.p-dropdown:not(.p-disabled):hover {
+        border-color: none;
+        border-radius: 0;
+    }
+
+    ::ng-deep.p-inputtext {
+        transition: none;
+    }
+
+    ::ng-deep.p-dropdown {
+        background: transparent;
+        border: none;
+        border-bottom: .1rem solid #b8b9be;
+        border-radius: 0;
+    }
+
+    ::ng-deep.p-dropdown-panel .p-dropdown-items:not(.p-dropdown-virtualscroll) {
+        background-color: #e6e7ee;
+        box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
+    }
+
+    ::ng-deep.p-dropdown-panel .p-dropdown-items .p-dropdown-item.p-highlight {
+        color: #44476a;
+        background-color: #e6e7ee;
+        box-shadow: 2px 2px 5px #b8b9be;
+        font-weight: bold;
+    }
+
+    ::ng-deep.p-dropdown-panel .p-dropdown-items .p-dropdown-item:not(.p-highlight):not(.p-disabled):hover {
+        color: #44476a;
+        background-color: #e6e7ee;
+        box-shadow: 2px 2px 5px #b8b9be;
+    }
+
+    ::ng-deep.p-dropdown-panel .p-dropdown-items .p-dropdown-item:not(.p-highlight):not(.p-disabled) {
+        background: transparent;
+    }
+
+    .mat-form-field {
+        font-size: 14px;
+        width: 100%;
+    }
