Row crud done. Missing row validations and grouping.

--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -1,6 +1,6 @@
 <form>
   <div class="iconbutton-container">
-    <div class="btnsave-container margin-right">
+    <div class="btnsave-container margin-rt">
       <button class="button-neumorphism" *ngIf="editField">Save</button>
     </div>
     <div class="iconbutton-neumorphism" matTooltip="Edit fields" matTooltipPosition="above" (click)="editFields()">
